--- a/JavaApplication10/nbproject/project.properties
+++ b/JavaApplication10/nbproject/project.properties
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=JavaApplication10
-main.class=view.JavaApplication10
+main.class=bankApplication.BankApplication
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
