--- a/JavaApplication10/nbproject/project.properties
+++ b/JavaApplication10/nbproject/project.properties
@@ -34,13 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/JavaApplication10
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\JCalendar\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Jasper\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jdatepicker-1.3.4.jar=C:\\Users\\Jasper\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.mysql-connector-j-9.1.0.jar=C:\\Users\\Jasper\\Documents\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0\\mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
